--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>Atomic Mills</title>
@@ -13,9 +13,17 @@
         h1 {
             color: darkred;
         }
+
+        .logo {
+            max-width: 300px;
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
+    <!-- 👇 Add your actual GitHub Pages path below -->
+    <img src="atomic-mills-logo.png" alt="Atomic Mills Logo" class="logo">
+
     <h1>Welcome to Atomic Mills</h1>
     <p>Home of Flappy Flakes™ and Nukey Nectar™</p>
     <hr>
