--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
     <h1>Welcome to Atomic Mills</h1>
     <p>Home of Flappy Flakes™ and Nukey Nectar™</p>
     <hr>
-    <p>🚧 Site under mysterious reconstruction since 1997 🚧</p>
+    <p>🚧 Site under reconstruction. 1997 🚧</p>
 </body>
 </html>
