--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
             max-width: 300px;
             margin-bottom: 20px;
         }
+
+        a {
+            color: darkred;
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
     <img src="atomic-mills-logo-5.png" alt="Atomic Mills Logo" class="logo">
 
     <h1>Welcome to Atomic Mills</h1>
-    <p>Home of Flappy Flakes™ and Nukey Nectar™</p>
-    <hr>
-    <p>🚧 Site under reconstruction. 1997 🚧</p>
-</body>
-</html>
+    <p>Home
