--- a/index.html
+++ b/index.html
@@ -29,4 +29,10 @@
     <img src="atomic-mills-logo-5.png" alt="Atomic Mills Logo" class="logo">
 
     <h1>Welcome to Atomic Mills</h1>
-    <p>Home
+    <p>Home of Flappy Flakes™ and Nukey Nectar™</p>
+    <hr>
+    <p>🚧 Site under reconstruction. 1997 🚧</p>
+
+    <p><a href="about.html">About Atomic Mills</a></p>
+</body>
+</html>
