--- a/about.html
+++ b/about.html
@@ -30,9 +30,12 @@
   <h1>About Atomic Mills</h1>
   <div class="content">
     <p><b>Founded in 1939</b>, Atomic Mills was born at the intersection of post-war optimism and experimental breakfast science.</p>
-    <p>Led by visionary Dean Lockhart, we pioneered nuclear-powered cereals such as <i>Flappy Flakes™</i> and <i>Nukey Nectar™</i>, giving generations of citizens the radiant start to their day they didn’t know they needed.</p>
-    <p>Our mission? To energize the morning with science, sunshine, and a dash of mild paranoia.</p>
-    <p>Want to go back? <a href="index.html">Return to the homepage</a></p>
+
+    <p>Led by visionary Dean Lockhart, we pioneered nuclear-powered food such as <i>Flappy Flakes™</i> breakfast cereal and <i>Nukey Nectar™</i>—the world’s first honey made from radioactive bees. By harnessing the raw power of nuclear energy, Nukey Nectar™ provides unmatched speed and strength to those bold enough to spread it on their toast.</p>
+
+    <p>Our mission? To energize the morning with science, sunshine, and a wholesome blast of innovation.</p>
+
+    <p><a href="index.html">Return to the homepage</a></p>
   </div>
 </body>
 </html>
