--- a/index.html
+++ b/index.html
@@ -1,38 +1,91 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Atomic Mills</title>
-    <style>
-        body {
-            background: #fffbe6;
-            font-family: monospace;
-            text-align: center;
-            padding: 40px;
-        }
+  <title>Atomic Mills</title>
+  <style>
+    body {
+      background: #fffbe6;
+      font-family: monospace;
+      text-align: center;
+      padding: 40px;
+      margin: 0;
+    }
 
-        h1 {
-            color: darkred;
-        }
+    h1 {
+      color: darkred;
+    }
 
-        .logo {
-            max-width: 300px;
-            margin-bottom: 20px;
-        }
+    .logo {
+      max-width: 300px;
+      margin-bottom: 20px;
+    }
 
-        a {
-            color: darkred;
-            text-decoration: underline;
-        }
-    </style>
+    .section {
+      max-width: 700px;
+      margin: 40px auto;
+      text-align: left;
+    }
+
+    .section h2 {
+      color: darkred;
+      border-bottom: 2px solid darkred;
+      padding-bottom: 5px;
+    }
+
+    .gallery {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 40px;
+      flex-wrap: wrap;
+    }
+
+    .gallery img {
+      width: 100%;
+      max-width: 200px;
+      height: auto;
+      border: 1px solid #ccc;
+    }
+
+    .caption {
+      margin-top: 10px;
+      font-size: 14px;
+      color: #444;
+    }
+
+    .gallery-item {
+      max-width: 200px;
+    }
+  </style>
 </head>
 <body>
-    <img src="atomic-mills-logo-5.png" alt="Atomic Mills Logo" class="logo">
 
-    <h1>Welcome to Atomic Mills</h1>
-    <p>Home of Flappy Flakes™ and Nukey Nectar™</p>
-    <hr>
-    <p>🚧 Site under reconstruction. 1997 🚧</p>
+  <img src="atomic-mills-logo.png" alt="Atomic Mills Logo" class="logo">
 
-    <p><a href="about.html">About Atomic Mills</a></p>
+  <h1>Welcome to Atomic Mills</h1>
+  <p>Home of Flappy Flakes™, Nukey Nectar™, and Honey Thunder Cola™</p>
+
+  <div class="section">
+    <h2>About Us</h2>
+    <p><b>Founded in 1939</b>, Atomic Mills was born at the intersection of post-war optimism and experimental breakfast science.</p>
+    <p>Led by visionary Dean Lockhart, we pioneered nuclear-powered cereals such as <i>Flappy Flakes™</i> and <i>Nukey Nectar™</i>—the world’s first honey made from radioactive bees. By harnessing the raw power of nuclear energy, Nukey Nectar™ provides unmatched speed and strength to those bold enough to spread it on their toast.</p>
+    <p>Our mission? To energize the morning with science, sunshine, and a wholesome blast of innovation.</p>
+  </div>
+
+  <div class="gallery">
+    <div class="gallery-item">
+      <img src="bee-farm.png" alt="Radioactive Bee Farm">
+      <div class="caption">Dean & Eleanor at the radioactive bee farm</div>
+    </div>
+    <div class="gallery-item">
+      <img src="flappy-family.png" alt="Family Breakfast with Flappy Flakes">
+      <div class="caption">Family breakfast powered by Flappy Flakes™</div>
+    </div>
+    <div class="gallery-item">
+      <img src="honey-thunder.png" alt="Dean at the gym with Honey Thunder Cola">
+      <div class="caption">Dean Lockhart post-workout with Honey Thunder Cola™</div>
+    </div>
+  </div>
+
 </body>
 </html>
