--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </head>
 <body>
 
-  <img src="atomic-mills-logo.png" alt="Atomic Mills Logo" class="logo">
+  <img src="atomic-mills-logo-5.png" alt="Atomic Mills Logo" class="logo">
 
   <h1>Welcome to Atomic Mills</h1>
   <p>Home of Flappy Flakes™, Nukey Nectar™, and Honey Thunder Cola™</p>
