--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <img src="atomic-mills-logo-5.png" alt="Atomic Mills Logo" class="logo">
 
   <h1>Welcome to Atomic Mills</h1>
-  <p>Home of Flappy Flakes™, Nukey Nectar™, and Honey Thunder Cola™</p>
+  <p>Makers of the World’s First Atomic Breakfast</p>
 
   <div class="section">
     <h2>About Us</h2>
