--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
   <div class="section">
     <h2>About Us</h2>
-      <p><b>Founded in 1940</b>, Atomic Mills emerged at the crossroads of golden-age optimism and experimental breakfast science.</p>
+      <p>Founded in 1940, Atomic Mills emerged at the crossroads of golden-age optimism and experimental breakfast science.</p>
       <p>Led by visionary Dean Lockhart, we pioneered nuclear-powered cereals like <i>Flappy Flakes™</i> and introduced the world’s first honey made from radioactive bees: <i>Nukey Nectar™</i>. By harnessing the raw force of nuclear energy, our creations deliver unmatched speed and strength to those bold enough to make them part of their morning ritual.</p>
       <p>Our mission? To spark every day with science, sunshine, and a wholesome blast of innovation.</p>
   </div>
