--- a/blog.html
+++ b/blog.html
@@ -1,1 +1,23 @@
+<h2>Welcome to the Atomic Mills Homepage!</h2>
+
+<p><i>Posted by: "J" | November 12, 1996</i></p>
+
+<p>Hello, world!</p>
+
+<p>If you’re reading this, you’ve found what’s left of Atomic Mills.</p>
+
+<p>We made some waves back in the '40s — Flappy Flakes™, Nukey Nectar™, Honey Thunder Cola™ — maybe you’ve heard of them (or maybe your grandparents have!).</p>
+
+<p>For a long time, people said Atomic Mills was a relic of another era. Too experimental. Too radioactive. Too far ahead of its time.</p>
+
+<p>But now, thanks to this amazing thing called the Internet, we finally have a chance to bring our story back to life.</p>
+
+<p>This is our first official Atomic Mills website. It’s still under construction (kind of like the parking lot at the old plant...), but stick around. We'll be posting more about our history, our products, and maybe even a few new experiments for the 21st century.</p>
+
+<p>Thanks for stopping by. And remember: <b>Eat Flappy. Live Snappy.</b></p>
+
+<p>- J</p>
+
+<hr>
+
 
