--- a/blog.html
+++ b/blog.html
@@ -18,6 +18,14 @@
 
 <p>- J</p>
 
+<hr style="border: 2px dashed darkred; margin: 50px 0;">
+
+<h2>Merry Christmas from Atomic Mills!</h2>
+
+<p><i>Posted by: "J" | December 24, 1996</i></p>
+
+<p>Just wanted to wish everyone a Merry Christmas and a Flappy New Year! Thanks for making our first year online one to remember. See you in '97!</p>
+
+<p>- J</p>
+
 <hr>
-
-
