--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@
 
 <p>This is our first official Atomic Mills website. It’s still under construction (kind of like the parking lot at the old plant...), but stick around. We'll be posting more about our history, our products, and maybe even a few new experiments for the 21st century.</p>
 
-<p>Thanks for stopping by. And remember: <b>Eat Flappy. Live Snappy.</b></p>
+<p>Thanks for stopping by!</p>
 
 <p>- J</p>
 
