--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
     .gallery-item {
       max-width: 200px;
     }
+
+    a {
+      color: darkred;
+      text-decoration: underline;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
@@ -64,6 +70,8 @@
 
   <h1>Welcome to Atomic Mills</h1>
   <p>Makers of the World’s First Atomic Breakfast</p>
+
+  <p><a href="blog.html">Read Our Blog</a></p>
 
   <div class="section">
     <h2>About Us</h2>
