--- a/blog.html
+++ b/blog.html
@@ -4,15 +4,15 @@
 
 <p>Hello, world!</p>
 
-<p>If you’re reading this, you’ve found what’s left of Atomic Mills.</p>
+<p>Welcome to the official Atomic Mills website! Glad you found us.</p>
 
-<p>We made some waves back in the '40s — Flappy Flakes™, Nukey Nectar™, Honey Thunder Cola™ — maybe you’ve heard of them (or maybe your grandparents have!).</p>
+<p>We made some waves back in the 1940s with Flappy Flakes, Nukey Nectar, and Honey Thunder Cola, maybe you have heard of them (or maybe your grandparents have!).</p>
 
-<p>For a long time, people said Atomic Mills was a relic of another era. Too experimental. Too radioactive. Too far ahead of its time.</p>
+<p>For a long time, people said Atomic Mills was too experimental, too radioactive, too far ahead of its time.</p>
 
-<p>But now, thanks to this amazing thing called the Internet, we finally have a chance to bring our story back to life.</p>
+<p>But now, thanks to the Internet, we finally have a chance to bring our story, and hopefully some new products, back to life.</p>
 
-<p>This is our first official Atomic Mills website. It’s still under construction (kind of like the parking lot at the old plant...), but stick around. We'll be posting more about our history, our products, and maybe even a few new experiments for the 21st century.</p>
+<p>This is our first official Atomic Mills website. It is still under construction (kind of like the parking lot at the old plant), but stick around. We will be posting more about our history, our products, and maybe even a few new experiments for the 21st century.</p>
 
 <p>Thanks for stopping by!</p>
 
@@ -24,7 +24,7 @@
 
 <p><i>Posted by: "J" | December 24, 1996</i></p>
 
-<p>Just wanted to wish everyone a Merry Christmas and a Flappy New Year! Thanks for making our first year online one to remember. See you in '97!</p>
+<p>Just wanted to wish everyone a Merry Christmas and a Flappy New Year! See you in 1997!</p>
 
 <p>- J</p>
 
