--- a/index.html
+++ b/index.html
@@ -94,6 +94,6 @@
       <div class="caption">Dean Lockhart post-workout with Honey Thunder Cola™</div>
     </div>
   </div>
-
+  <p>Contact: <a href="mailto:AtomicMills@aol.com">AtomicMills@aol.com</a></p>
 </body>
 </html>
