--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
       <img src="bee-farm.png" alt="Radioactive Bee Farm">
       <div class="caption">Dean & Eleanor at the radioactive bee farm</div>
     </div>
+      <div class="gallery-item">
+      <img src="atomic-mills-team.png" alt="The Atomic Mills team, 1941">
+      <div class="caption">The Atomic Mills team, 1941</div>
+    </div>
     <div class="gallery-item">
       <img src="flappy-family.png" alt="Family Breakfast with Flappy Flakes">
       <div class="caption">Family breakfast powered by Flappy Flakes™</div>
