--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
   <title>Atomic Mills</title>
   <style>
     body {
@@ -84,16 +85,12 @@
 
   <div class="section">
     <h2>About Us</h2>
-      <p>Founded in 1940, in a universe where bears can fly, Atomic Mills emerged at the crossroads of golden-age optimism and experimental breakfast science.</p>
-      <p>Led by visionary Dean Lockhart, we pioneered nuclear-powered cereals like <i>Flappy Flakes</i> and introduced the world’s first honey made from radioactive bees: <i>Nukey Nectar</i>. By harnessing the raw force of nuclear energy, our creations deliver unmatched speed and strength to those bold enough to make them part of their morning ritual.</p>
-      <p>Our mission? To spark every day with science, sunshine, and a wholesome blast of innovation.</p>
+    <p>Founded in 1940, in a universe where bears can fly, Atomic Mills emerged at the crossroads of golden-age optimism and experimental breakfast science.</p>
+    <p>Led by visionary Dean Lockhart, we pioneered nuclear-powered cereals like <i>Flappy Flakes</i> and introduced the world’s first honey made from radioactive bees: <i>Nukey Nectar</i>. By harnessing the raw force of nuclear energy, our creations deliver unmatched speed and strength to those bold enough to make them part of their morning ritual.</p>
+    <p>Our mission? To spark every day with science, sunshine, and a wholesome blast of innovation.</p>
   </div>
 
   <div class="gallery">
-    <div class="gallery-item">
-      <img src="bee-farm.png" alt="Radioactive Bee Farm">
-      <div class="caption">Dean & Eleanor at the radioactive bee farm</div>
-    </div>
     <div class="gallery-item">
       <img src="atomic-mills-team.png" alt="The Atomic Mills team, 1941">
       <div class="caption">The Atomic Mills team, 1941</div>
@@ -108,15 +105,12 @@
     </div>
   </div>
 
-  <br>
-
-  <p>Contact: <a href="mailto:AtomicMills@aol.com">AtomicMills@aol.com</a></p>
-
   <div class="social-links">
-    <p>Follow us:</p>
+    <p>Connect with Us:</p>
     <a href="https://www.linkedin.com/company/atomic-mills" target="_blank">LinkedIn</a> |
     <a href="https://x.com/AtomicMillsCo" target="_blank">X</a> |
-    <a href="https://www.instagram.com/atomicmillsco/" target="_blank">Instagram</a>
+    <a href="https://www.instagram.com/atomicmillsco/" target="_blank">Instagram</a> |
+    <a href="mailto:AtomicMills@aol.com">Email</a>
   </div>
 
 </body>
