--- a/index.html
+++ b/index.html
@@ -81,8 +81,6 @@
   <h1>Welcome to Atomic Mills</h1>
   <p>Makers of the World’s First Atomic Breakfast</p>
 
-  <p><a href="blog.html">Read Our Blog</a></p>
-
   <div class="section">
     <h2>About Us</h2>
     <p>Founded in 1940, in a universe where bears can fly, Atomic Mills emerged at the crossroads of golden-age optimism and experimental breakfast science.</p>
@@ -91,6 +89,10 @@
   </div>
 
   <div class="gallery">
+    <div class="gallery-item">
+      <img src="bee-farm.png" alt="Radioactive Bee Farm">
+      <div class="caption">Dean & Eleanor at the radioactive bee farm</div>
+    </div>
     <div class="gallery-item">
       <img src="atomic-mills-team.png" alt="The Atomic Mills team, 1941">
       <div class="caption">The Atomic Mills team, 1941</div>
@@ -110,7 +112,8 @@
     <a href="https://www.linkedin.com/company/atomic-mills" target="_blank">LinkedIn</a> |
     <a href="https://x.com/AtomicMillsCo" target="_blank">X</a> |
     <a href="https://www.instagram.com/atomicmillsco/" target="_blank">Instagram</a> |
-    <a href="mailto:AtomicMills@aol.com">Email</a>
+    <a href="mailto:AtomicMills@aol.com">Email</a> |
+    <a href="blog.html">Blog</a>
   </div>
 
 </body>
