--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
 
 <p>Welcome to the official Atomic Mills website! Glad you found us.</p>
 
-<p>We made some waves back in the 1940s with Flappy Flakes, Nukey Nectar, and Honey Thunder Cola, maybe you have heard of them (or maybe your grandparents have!).</p>
+<p>We made some waves decades ago with Flappy Flakes, Nukey Nectar, and Honey Thunder Cola, maybe you have heard of them (or maybe your grandparents have!).</p>
 
 <p>For a long time, people said Atomic Mills was too experimental, too radioactive, too far ahead of its time.</p>
 
@@ -24,7 +24,7 @@
 
 <p><i>Posted by: "J" | December 24, 1996</i></p>
 
-<p>Just wanted to wish everyone a Merry Christmas and a Flappy New Year! See you in 1997!</p>
+<p>Just wanted to wish everyone a Merry Christmas and a Flappy New Year!</p>
 
 <p>- J</p>
 
