--- a/legal.html
+++ b/legal.html
@@ -126,7 +126,7 @@
   </div>
 
   <footer>
-    <p>© 2025 Matthew Burton. All rights reserved.</p>
+    <p>© 2025 Bearplane by Matthew Burton. All rights reserved.</p>
   </footer>
 
 </body>
