--- a/legal.html
+++ b/legal.html
@@ -62,31 +62,36 @@
     <p>You may use the Game for personal, non-commercial purposes only. The Game is designed for players aged 13 and older.</p>
 
     <h3>2. Intellectual Property</h3>
-    <p>Bearplane, including all rocket-powered chaos, is the exclusive property of Matthew Burton. No stealing, cloning, or attempting to reverse-engineer our carefully handcrafted bear.</p>
+    <p>All content within Bearplane, including graphics, gameplay, music, and text, is owned by Matthew Burton and protected under applicable copyright and trademark laws.</p>
 
     <h3>3. Purchases</h3>
-    <p>Bearplane offers optional in-app purchases. All purchases are final and non-refundable.</p>
+    <p>Bearplane offers two types of in-app purchases:</p>
+    <ul>
+      <li><strong>Non-Consumable Purchase:</strong> The full game unlock is refundable according to applicable store policies.</li>
+      <li><strong>Consumable Purchases:</strong> In-game consumable items are non-refundable once purchased and delivered.</li>
+    </ul>
+    <p>Please review your platform's refund policies for more details (Apple App Store, Google Play Store, or Steam).</p>
 
     <h3>4. Advertisements</h3>
-    <p>The Game may display third-party ads through Unity Ads. Ads help fund our rocket fuel. Thanks for understanding.</p>
+    <p>Bearplane may display advertisements through Unity Ads. All advertisements are optional — users choose whether or not to view ads for in-game benefits. Ads are never forced or mandatory for gameplay progression.</p>
 
     <h3>5. Third-Party Services</h3>
-    <p>Bearplane integrates with Apple Game Center, Google Play Services, and Steam for achievements and leaderboards.</p>
+    <p>Bearplane integrates with Apple Game Center, Google Play Services, and Steam for achievements and leaderboards. Your use of these services is governed by their respective terms and policies.</p>
 
     <h3>6. Limitation of Liability</h3>
-    <p>I am not liable for any indirect, incidental, or rocket-bear-related damages.</p>
+    <p>I am not liable for any indirect, incidental, or consequential damages arising from the use of Bearplane.</p>
 
     <h3>7. No Warranties</h3>
-    <p>Bearplane is provided "as is" — no guarantees your bear will fly straight (or at all).</p>
+    <p>Bearplane is provided "as is" — without warranties of any kind, express or implied, including fitness for a particular purpose.</p>
 
     <h3>8. Governing Law</h3>
-    <p>These Terms are governed by the laws of Missouri, USA.</p>
+    <p>These Terms are governed by the laws of the State of Missouri, United States of America.</p>
 
     <h3>9. Dispute Resolution</h3>
-    <p>Any disputes will be resolved through binding individual arbitration in Missouri.</p>
+    <p>By using Bearplane, you agree that any disputes will be resolved through binding individual arbitration in Missouri, and not through jury trials or class actions.</p>
 
     <h3>10. Changes to Terms</h3>
-    <p>Terms may be updated. Updates will be posted here at <a href="https://atomicmills.com/legal">https://atomicmills.com/legal</a>.</p>
+    <p>I reserve the right to update these Terms. Updates will be posted at <a href="https://atomicmills.com/legal.html">https://atomicmills.com/legal.html</a>.</p>
 
     <h3>11. Contact</h3>
     <p>Questions? Email me at <a href="mailto:m@ttburton.com">m@ttburton.com</a>.</p>
@@ -98,10 +103,15 @@
     <p>This Privacy Policy describes how Bearplane ("the Game") operated by Matthew Burton ("I", "me", "my") collects, uses, and protects information.</p>
 
     <h3>1. Information We Collect</h3>
-    <p>Bearplane does not collect personally identifiable information directly. However, third-party services like Unity Ads, Apple Game Center, Google Play Services, and Steam may collect limited information.</p>
+    <p>Bearplane does not collect personally identifiable information directly. However, third-party services like Unity Ads, Apple Game Center, Google Play Services, and Steam may collect information automatically.</p>
 
     <h3>2. How We Use Information</h3>
-    <p>Third-party services use this information to show ads and track achievements and leaderboards. We do not sell or trade your information.</p>
+    <p>Third-party services use information to:</p>
+    <ul>
+      <li>Serve optional advertisements (Unity Ads)</li>
+      <li>Track achievements and leaderboard standings (Game Center, Google Play Services, Steam)</li>
+    </ul>
+    <p>I do not sell, rent, or trade your information.</p>
 
     <h3>3. Third-Party Services</h3>
     <p>Bearplane connects with:</p>
@@ -113,13 +123,13 @@
     </ul>
 
     <h3>4. Children's Privacy</h3>
-    <p>Bearplane is intended for users aged 13 and older.</p>
+    <p>Bearplane is intended for players aged 13 and older. If you are younger than 13, please do not use the Game.</p>
 
     <h3>5. Security</h3>
-    <p>We take reasonable precautions but cannot guarantee perfect security in the wild world of the internet.</p>
+    <p>Reasonable measures are taken to protect your information, but no method of electronic storage or transmission is 100% secure.</p>
 
     <h3>6. Changes to This Policy</h3>
-    <p>This Privacy Policy may change over time. Updates will be posted at <a href="https://atomicmills.com/legal">https://atomicmills.com/legal</a>.</p>
+    <p>Changes to this Privacy Policy will be posted at <a href="https://atomicmills.com/legal.html">https://atomicmills.com/legal.html</a>.</p>
 
     <h3>7. Contact</h3>
     <p>Questions about privacy? Email <a href="mailto:m@ttburton.com">m@ttburton.com</a>.</p>
