--- a/legal.html
+++ b/legal.html
@@ -51,7 +51,7 @@
 <body>
 
   <h1>Bearplane Legal Information</h1>
-  <p>Effective Date: [Insert Launch Date]</p>
+  <p>Effective Date: May 15, 2025</p>
 
   <div class="section">
     <h2>Terms of Service</h2>
