--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
     <a href="https://x.com/AtomicMillsCo" target="_blank">X</a> |
     <a href="https://www.instagram.com/atomicmillsco/" target="_blank">Instagram</a> |
     <a href="mailto:AtomicMills@aol.com">Email</a> |
-    <a href="blog.html">Blog</a>
+    <a href="blog.html">Blog</a> |
+    <a href="legal.html">Legal</a>
   </div>
 
 </body>
