--- a/legal.html
+++ b/legal.html
@@ -98,7 +98,7 @@
   </div>
 
   <div class="section">
-    <h2>Privacy Policy</h2>
+    <h2 id="privacy-policy">Privacy Policy</h2>
 
     <p>This Privacy Policy describes how Bearplane ("the Game") operated by Matthew Burton ("I", "me", "my") collects, uses, and protects information.</p>
 
