--- a/legal.html
+++ b/legal.html
@@ -139,5 +139,16 @@
     <p>© 2025 Bearplane by Matthew Burton. All rights reserved.</p>
   </footer>
 
+<script>
+  window.onload = function() {
+    if (window.location.hash) {
+      var element = document.getElementById(window.location.hash.substring(1));
+      if (element) {
+        element.scrollIntoView();
+      }
+    }
+  };
+</script>
+  
 </body>
 </html>
