--- a/index.html
+++ b/index.html
@@ -81,12 +81,15 @@
   <h1>Welcome to Atomic Mills</h1>
   <p>Makers of the World’s First Atomic Breakfast</p>
 
-  <div class="section">
-    <h2>About Us</h2>
-    <p>Founded in 1940, in a universe where bears can fly, Atomic Mills emerged at the crossroads of golden-age optimism and experimental breakfast science.</p>
-    <p>Led by visionary Dean Lockhart, we pioneered nuclear-powered cereals like <i>Flappy Flakes</i> and introduced the world’s first honey made from radioactive bees: <i>Nukey Nectar</i>. By harnessing the raw force of nuclear energy, our creations deliver unmatched speed and strength to those bold enough to make them part of their morning ritual.</p>
-    <p>Our mission? To spark every day with science, sunshine, and a wholesome blast of innovation.</p>
-  </div>
+<div class="section">
+  <h2>About Us</h2>
+  <p>Founded in 1940, in a universe where bears can fly, <strong>Atomic Mills</strong> took flight with one radical mission: <em>win the war... with breakfast</em>.</p>
+  <p>As Allied forces searched for an edge, visionary food engineer <strong>Dean Lockhart</strong> answered the call. Backed by a team of barely-certified scientists and a loose understanding of radiation, Lockhart pioneered <strong>nuclear-infused food products</strong> designed to supercharge soldiers with <em>unmatched speed, strength, and spirit</em>.</p>
+  <p>From the launch of <em>Flappy Flakes Cereal</em> to the sticky brilliance of <em>Nukey Nectar</em>, harvested from radioactive bees, Atomic Mills turned <strong>science into sustenance—and breakfast into a battleground</strong>.</p>
+  <p><strong>Born on the battlefield, embraced at the breakfast table. And while the world keeps spinning, our mission stays the same:</strong></p>
+  <p><strong>To fuel every morning with sunshine, science, and a wholesome blast of atomic innovation.</strong></p>
+</div>
+
 
   <div class="gallery">
     <div class="gallery-item">
