--- a/bearplane.html
+++ b/bearplane.html
@@ -7,19 +7,15 @@
   <style>
     body {
       margin: 0;
-      padding: 0;
-      background: #f0f0f5;
-      font-family: Arial, sans-serif;
-      color: #333;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
+      padding: 40px;
+      background: #fffbe6;
+      font-family: monospace;
       text-align: center;
+      color: #333;
     }
     .container {
       max-width: 600px;
+      margin: 0 auto;
       padding: 20px;
     }
     .logo {
@@ -28,26 +24,28 @@
     }
     h1 {
       font-size: 2.5rem;
-      margin: 0 0 10px;
+      color: darkred;
+      margin-bottom: 10px;
     }
     p {
       font-size: 1.2rem;
       margin: 0 0 20px;
     }
+    #countdown {
+      font-size: 1.5rem;
+      margin-bottom: 20px;
+      color: darkred;
+    }
     .coming-soon {
       display: block;
       margin: 10px auto;
       padding: 10px 20px;
-      background: #ff6600;
-      color: #fff;
+      background: darkred;
+      color: #fffbe6;
       font-weight: bold;
       border-radius: 4px;
       text-decoration: none;
       width: fit-content;
-    }
-    #countdown {
-      font-size: 1.5rem;
-      margin-bottom: 20px;
     }
     form {
       margin-top: 20px;
@@ -58,20 +56,27 @@
       margin-bottom: 10px;
       border: 1px solid #ccc;
       border-radius: 4px;
+      font-family: monospace;
     }
     input[type="submit"] {
       padding: 10px 20px;
-      background: #0073e6;
-      color: #fff;
+      background: darkred;
+      color: #fffbe6;
       border: none;
       border-radius: 4px;
       cursor: pointer;
+      font-family: monospace;
+    }
+    a {
+      color: darkred;
+      text-decoration: underline;
+      font-family: monospace;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <img src="images/bearplane.png" alt="Bearplane" class="logo" />
+    <img src="bearplane.png" alt="Bearplane" class="logo" />
     <h1>Bearplane</h1>
     <p>Prepare for takeoff! Bearplane is soaring in soon. Stay tuned for gravity-defying adventures and atomic-powered flight.</p>
     <div id="countdown">Loading countdown...</div>
