--- a/bearplane.html
+++ b/bearplane.html
@@ -74,25 +74,25 @@
 
   <div class="section">
     <h2>Ram! Roast! Roar! Victory awaits!</h2>
-    <img src="gif1-gameplay.gif" alt="Gameplay GIF" class="gif">
+    <img src="ram-roast-roar-gif.gif" alt="Gameplay GIF" class="gif">
     <p>Rain down righteous justice from above! Ram enemy aircraft into scrap metal, roast bad guys mid-flight with blazing jet flames, or belt out a sky-shaking roar that ejects foes straight from their cockpits. The skies won’t know what hit ’em.</p>
   </div>
 
   <div class="section">
     <h2>Suit up, power up, and look sharp!</h2>
-    <img src="gif2-loadout.gif" alt="Loadout GIF" class="gif">
+    <img src="hats-and-weapons-gif.gif" alt="Loadout GIF" class="gif">
     <p>Every hero needs an arsenal... and flair! Equip bazookas, jousting lances, and other wild weapons of sky-bound destruction. Then top it off with a tactical hat built for glory. Some hats boost your weapons, others give you an edge in specific weather. The right combo turns you into a flying fortress!</p>
   </div>
 
   <div class="section">
     <h2>From the makers of the world’s first atomic breakfast</h2>
-    <img src="gif3-atomicmills.gif" alt="Atomic Mills GIF" class="gif">
+    <img src="atomic-mills-powers-gif.gif" alt="Atomic Mills GIF" class="gif">
     <p>Gobble Flappy Flakes, chug Nukey Nectar, and pop open a bottle of Honey Thunder Cola. These top-secret nutritional breakthroughs give you blistering speed, flapping flight, and brute strength. Side effects may include total domination.</p>
   </div>
 
   <div class="section">
     <h2>Co-op chaos</h2>
-    <img src="gif4-coop.gif" alt="Co-op GIF" class="gif">
+    <img src="co-op-gif.gif" alt="Co-op GIF" class="gif">
     <p>Grab a controller and enlist a co-pilot! Player 2 joins as Rifle Rat, your gun-toting sidekick. Join forces, double your firepower, and deliver freedom&mdash;one explosion at a time.</p>
   </div>
 
@@ -121,7 +121,7 @@
 
     <div class="faq-item">
       <h3>Does the game support localization?</h3>
-      <p>Yes, Bearplane supports 13+ languages, including French, Spanish, Japanese, and more.</p>
+      <p>Kinda, Bearplane supports 13+ languages, including French, Spanish, Japanese, and more.</p>
     </div>
   </div>
 
