--- a/bearplane.html
+++ b/bearplane.html
@@ -74,13 +74,13 @@
 
   <div class="section">
     <h2>Ram! Roast! Roar! Victory awaits!</h2>
-    <img src="ram-roast-roar-gif.gif" alt="Gameplay GIF" class="gif">
+    <img src="combat.gif" alt="Gameplay GIF" class="gif">
     <p>Rain down righteous justice from above! Ram enemy aircraft into scrap metal, roast bad guys mid-flight with blazing jet flames, or belt out a sky-shaking roar that ejects foes straight from their cockpits. The skies won’t know what hit ’em.</p>
   </div>
 
   <div class="section">
     <h2>Suit up, power up, and look sharp!</h2>
-    <img src="hats-and-weapons-gif.gif" alt="Loadout GIF" class="gif">
+    <img src="hats.gif" alt="Loadout GIF" class="gif">
     <p>Every hero needs an arsenal... and flair! Equip bazookas, jousting lances, and other wild weapons of sky-bound destruction. Then top it off with a tactical hat built for glory. Some hats boost your weapons, others give you an edge in specific weather. The right combo turns you into a flying fortress!</p>
   </div>
 
@@ -92,7 +92,7 @@
 
   <div class="section">
     <h2>Co-op chaos</h2>
-    <img src="co-op-gif.gif" alt="Co-op GIF" class="gif">
+    <img src="co-op.gif" alt="Co-op GIF" class="gif">
     <p>Grab a controller and enlist a co-pilot! Player 2 joins as Rifle Rat, your gun-toting sidekick. Join forces, double your firepower, and deliver freedom&mdash;one explosion at a time.</p>
   </div>
 
