--- a/bearplane.html
+++ b/bearplane.html
@@ -34,7 +34,7 @@
 
     .gif {
       width: 100%;
-      max-width: 600px;
+      max-width: 800px;
       display: block;
       margin: 20px auto;
     }
@@ -121,7 +121,7 @@
 
     <div class="faq-item">
       <h3>Does the game support localization?</h3>
-      <p>Kinda, Bearplane supports 13+ languages, including French, Spanish, Japanese, and more.</p>
+      <p>Sorta, Bearplane supports 13+ languages, including French, Spanish, Japanese, and more.</p>
     </div>
   </div>
 
