--- a/bearplane.html
+++ b/bearplane.html
@@ -134,7 +134,7 @@
 
     <div class="faq-item">
       <h3>Does the game support localization?</h3>
-      <p>Sorta, Bearplane supports 13+ languages, including French, Spanish, Japanese, and more.</p>
+      <p>Mostly, Bearplane supports 13+ languages, including French, Spanish, Japanese, and more.</p>
     </div>
   </div>
 
