--- a/bearplane.html
+++ b/bearplane.html
@@ -86,6 +86,11 @@
   <p><strong>Take to the skies as a rocket-powered bear in Bearplane</strong>&mdash;a whimsical, action-packed adventure inspired by the legendary tale of Wojtek. Battle dastardly foes with outrageous abilities, explosive power-ups, and a whole lot of midair mayhem.</p>
 
   <div class="section">
+    <h1>Bearplane</h1>
+    <p>Take to the skies as a rocket-powered bear in Bearplane&mdash;a whimsical, action-packed adventure inspired by the legendary tale of Wojtek. Battle dastardly foes with outrageous abilities, explosive power-ups, and a whole lot of midair mayhem.</p>
+  </div>
+
+  <div class="section">
     <h2>Ram! Roast! Roar! Victory awaits!</h2>
     <img src="800px-combat.gif" alt="Gameplay GIF" class="gif">
     <p>Rain down righteous justice from above! Ram enemy aircraft into scrap metal, roast bad guys mid-flight with blazing jet flames, or belt out a sky-shaking roar that ejects foes straight from their cockpits. The skies won’t know what hit ’em.</p>
