--- a/bearplane.html
+++ b/bearplane.html
@@ -80,10 +80,8 @@
 </head>
 <body>
 
-  <img src="atomic-mills-logo-5.png" alt="Atomic Mills Logo" class="logo">
-
   <h1>
-    <img src="bearplane-font.png" alt="Bearplane Logo" class="section">
+    <img src="800x480-main.gif" alt="Bearplane Logo" class="section">
   </h1>
 
   <div class="section">
