--- a/bearplane.html
+++ b/bearplane.html
@@ -82,9 +82,12 @@
 
   <h1>
     <img src="800x480-main.gif" alt="Bearplane Logo" class="section">
-    <p>Take to the skies as a rocket-powered bear in Bearplane&mdash;a whimsical, action-packed adventure inspired by the legendary tale of Wojtek. Battle dastardly foes with outrageous abilities, explosive power-ups, and a whole lot of midair mayhem.</p>
   </h1>
 
+  <div class="section">
+    <p>Take to the skies as a rocket-powered bear in Bearplane&mdash;a whimsical, action-packed adventure inspired by the legendary tale of Wojtek. Battle dastardly foes with outrageous abilities, explosive power-ups, and a whole lot of midair mayhem.</p>
+  </div>
+  
   <div class="section">
     <h2>Ram! Roast! Roar! Victory awaits!</h2>
     <img src="800px-combat.gif" alt="Gameplay GIF" class="gif">
