--- a/bearplane.html
+++ b/bearplane.html
@@ -76,6 +76,15 @@
     text-decoration: underline;
     font-weight: bold;
   }
+
+  h1 {
+    margin-bottom: 0;
+  }
+  
+  h1 img {
+    display: block;
+    margin: 0 auto 10px;
+  }
 </style>
 </head>
 <body>
